# PromptSpec

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: promptspec-minimal.yaml  promptspec.yaml
promptspec/: __init__.py  assertions.py  cli.py  gateway.py  runner.py  spec.py  utils.py
tests/: __init__.py  test_assertions.py  test_spec.py
